--- a/source/_authors/hac425.yml
+++ b/source/_authors/hac425.yml
@@ -1,4 +1,4 @@
 name: hac425
 about: 一个想做渗透的 bin 
-site: https://jinyu00.github.io/
-email: 327164983@qq.com
+site: http://blog.hac425.top/
+email: hac425xxx@gmail.com
