--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Asuri Team
-subtitle: from NUAA to world.
+subtitle: Asuri Secure yoUR Information.
 description:
 author: All Members
 language: cn
