CI: Fix npm script.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "asuri-blog",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "build": "hexo generate",
+    "clean": "hexo clean",
+    "deploy": "hexo deploy",
+    "server": "hexo server"
+  },
   "hexo": {
     "version": "5.2.0"
   },
