--- a/source/_authors/l1nk.yml
+++ b/source/_authors/l1nk.yml
@@ -1,4 +1,6 @@
 name: l1nk
 about: 想要混入安全圈的菜鸡，只会搞简单的bin
+github: yuanLink
 site: http://showlinkroom.me/
 email: link3d1nmail@gmail.com
+avatar: https://avatars0.githubusercontent.com/u/16820130?s=75&v=4
