--- a/source/_authors/rexskz.yml
+++ b/source/_authors/rexskz.yml
@@ -1,4 +1,6 @@
 name: Rex Zeng
 about: 音游狗、安全狗、攻城狮、业余设计师、段子手、苦学日语的少年。
 site: https://www.rexskz.info/
+github: rexskz
 email: rex@rexskz.info
+avatar: https://avatars1.githubusercontent.com/u/27483702?s=75&v=4
