--- a/source/_authors/zedd.yml
+++ b/source/_authors/zedd.yml
@@ -1,4 +1,6 @@
-name: Zedd
-about: Newer of Web Security
+name: ZeddYu
+about: 16级成员，萌新 Web 选手，一个想去 DEFCON 的萌新
 site: https://blog.zeddyu.info
+github: ZeddYu
 email: zeddyu.lu@gmail.com
+avatar: http://q1.qlogo.cn/g?b=qq&nk=935702251&s=640
