--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,8 @@ i18n_dir: :lang
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+external_link:
+  enable: true
 filename_case: 0
 render_drafts: false
 post_asset_folder: true
@@ -41,7 +42,7 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
-  
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
@@ -50,7 +51,7 @@ index_generator:
   path: ''
   per_page: 10
   order_by: -date
-  
+
 # Category & Tag
 default_category: uncategorized
 category_map:
@@ -73,7 +74,7 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 theme: landscape
 
-skip_render: 
+skip_render:
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
