--- a/source/_authors/xm1994.yml
+++ b/source/_authors/xm1994.yml
@@ -1,4 +1,6 @@
 name: Yibai Zhang
 about: 一只苦逼的研发狗，理智成为安全工程师。
 site: https://www.summershrimp.com/
+github: summershrimp
 email: xm1994@outlook.com
+avatar: https://avatars0.githubusercontent.com/u/10265470?s=75&v=4
