--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -41,4 +41,5 @@ jobs:
           git config --global user.email "xm1994+asuri-robot@gmail.com"
           git config --global user.name "Asuri Robot"
           sed -i "s~git@github.com:Asuri-Team/Asuri-Team.github.io.git~https://${{secrets.REPO_TOKEN}}:x-oauth-basic@github.com/Asuri-Team/Asuri-Team.github.io.git~" _config.yml
+          sed -i "s~sftp-password-placeholder~${{secrets.RSYNC_PASSWORD}}~" _config.yml
           npm run deploy
