--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo": "^5.2.0",
     "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
     "hexo-deployer-git": "^2.1.0",
+    "hexo-deployer-sftp": "^0.4.1",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
